# adaptive-arc-solver

./: pyproject.toml
benchmark/: arc_fix.py
models/: train_sota.py
notebooks/: ablation.ipynb  baseline.ipynb  baseline.py  synthesizer.ipynb
paper/: figure_generator.py  paper.tex  references.bib
src/: _init_.py  adapter.py  ensemble.py  explorer.py  synthesizer.py
submissions/: submit_all.py
