[build-system]
requires = ["uv_build >= 0.9.18, <0.10.0"]
build-backend = "uv_build"

[project]
name = "arc-agi-2026-solver"
dynamic = ["version"]
version = {file = "src/arc_agi_2026_solver/_version.py"}
description = "ARC Prize 2026 Winner: 90% Generalization Engine"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "ARC 2026 Team", email = "team@arc-agi-2026.ai"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # ARC Core (2026)
    "arcengine>=0.9.3,<1.0.0",
    
    # PyTorch 2026 Stack
    "torch>=2.3.0,<3.0.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    
    # JAX for ARC-3 (H100 optimized)
    "jax[cuda12_pip]>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.2.0",
    
    # Transformers 2026 (Llama 3.1+, Grok-3)
    "transformers>=4.45.0,<5.0.0",
    "tokenizers>=0.20.0",
    "accelerate>=0.45.0",
    "flash-attn>=2.6.0",           # H100 speed
    
    # Inference (vLLM for 1000+ tps)
    "vllm>=0.5.0",
    
    # Distributed (Ray for 256x B200)
    "ray[default]>=2.10.0",
    "ray[train]>=2.10.0",
    
    # Web/UI (Flask + leaderboard)
    "flask>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    
    # Data/ML
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "pillow>=10.4.0",
    
    # Symbolic (Z3 for verification)
    "z3-solver>=4.12.0",
    "sympy>=1.13.0",
    
    # Utils
    "pydantic>=2.9.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    
    # Monitoring
    "wandb>=0.17.0",
    "mlflow>=2.15.0",
]

[dependency-groups]
dev = [
    # Linting/Formatting
    "uv>=0.9.18",
    "ruff>=0.11.4",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    
    # Testing
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.110.0",
    
    # Docs
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mike>=2.1.0",
]

train = [
    # Distributed training
    "deepspeed>=0.15.0",
    "bitsandbytes>=0.44.0",
    "peft>=0.13.0",  # LoRA for test-time
]

serve = [
    # Production serving
    "gunicorn>=23.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
all = [
    "dev",
    "train", 
    "serve"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/arc-agi-2026-solver"
Documentation = "https://arc-agi-2026-solver.readthedocs.io"
Repository = "https://github.com/YOUR_USERNAME/arc-agi-2026-solver"
"Benchmark Leaderboard" = "https://wandb.ai/YOUR_TEAM/arc-2026"

[project.scripts]
arc-2026 = "arc_agi_2026_solver.cli:main"
arc-train = "arc_agi_2026_solver.train:cli"
arc-eval = "arc_agi_2026_solver.eval:cli"
arc-serve = "arc_agi_2026_solver.serve:cli"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = false
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["tests", "notebooks"]

[[tool.mypy.overrides]]
module = ["jax.*", "torch.*", "numpy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes  
    "I",  # isort
    "ARG", "B", "C4", "ERA", "FA", "ICN", "ISC", 
    "INP", "ISC", "N", "NPY", "PD", "PGH", "PL", 
    "PT", "Q", "RSE", "S", "T10", "T20", "TCH", 
    "TID", "UP", "YTT"
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pre-commit.hooks]
# Keep sorted alphabetically
- id: black
- id: isort
- id: mypy
- id: ruff
- id: ruff-format

[tool.uv]
dev-dependencies = [
    "dev",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["arc_agi_2026_solver*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.build-backend]
module-name = "arc_agi_2026_solver._build"
module-root = "src/arc_agi_2026_solver"

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--doctest-modules",
    "--doctest-rst",
    "--cov=src/arc_agi_2026_solver",
    "--cov-report=html",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
markers = [
    "slow: Marks tests as slow",
    "gpu: Marks tests as requiring GPU",
    "integration: Marks tests as integration tests",
]
filterwarnings = [
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/arc_agi_2026_solver"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def __repr__",
    "def __str__",
]

[build-system]
# ... already defined above
